# Feader

./: .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ai-configuration.md  ai-mcp-cli-plan.md  evm-wallet-login-plan.md  long-term-todo-plan.md  plugin-system.md  xpath-fields.md
docs/superpowers/plans/: 2026-05-23-folo-hybrid-ui-redesign.md  2026-05-23-two-column-quicklook-reader.md  2026-05-24-ai-settings-and-xpath-suggest.md  2026-05-24-article-html-sanitization.md  2026-05-24-plugin-cookie-and-reader-customization.md  2026-05-24-xpath-real-world.md
docs/superpowers/specs/: 2026-05-23-folo-hybrid-ui-redesign-design.md  2026-05-23-two-column-quicklook-reader-design.md  2026-05-24-ai-settings-and-xpath-suggest-design.md  2026-05-24-plugin-cookie-and-reader-customization-design.md  2026-05-24-plugin-marketplace-design.md  2026-05-24-xpath-real-world-design.md
scripts/: feader-get-cookies.user.js  test-xpath.sh
src/: App.css  App.tsx  main.tsx  wallet.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  cli.rs  db.rs  error.rs  feed_adapter.rs  json_adapter.rs  lib.rs  main.rs  models.rs  plugin_registry.rs  refresh.rs  xpath_adapter.rs
src-tauri/src/commands/: ai_settings.rs  articles.rs  credentials.rs  marketplace.rs  mod.rs  plugin_config.rs  rsshub.rs  settings_layout.rs  sources.rs  wallet.rs
