[package]
name = "feader"
version = "0.1.0"
description = "AI-native, Web3-friendly RSS reader"
authors = ["Frankie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "feader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ammonia = "4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
html5ever = "0.39"
markup5ever_rcdom = "0.39"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
url = "2"
xml5ever = "0.39"
siwe = "0.6"
hex = "0.4"
sha2 = "0.11.0"
regex = "1.12.3"
